--- a/web/nav/index.html
+++ b/web/nav/index.html
@@ -3,13 +3,13 @@ layout: basic
 navs:
   Logo: 
     name: 'Logo'
-    url: /web/nav
+    url: /web/nav/
   Link1: 
     name: '[Include Sample]'
-    url: /web/include
+    url: /web/include/
   Link1: 
     name: '[Include Sample]'
-    url: /web/include
+    url: /web/include/
 ---
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
