--- a/web/back/index.html
+++ b/web/back/index.html
@@ -4,7 +4,7 @@ layout: basic
 
 <div class='container'>
   <button class="btn btn-warning">
-    <a class="fa fa-angle-left" href="{{ "/web/pages.html" | prepend: site.baseurl }}" >Back</a>
+    <a class="fa fa-angle-left" href="{{ "/web/pages/" | prepend: site.baseurl }}" >Back</a>
   </button>
   <button class="btn btn-info">
     <i class="fas fa-tv"></i>
