--- a/web/back/index.html
+++ b/web/back/index.html
@@ -1,5 +1,15 @@
 ---
-layout: basic
+layout: test/blog
+navs:
+  Logo: 
+    name: 'Logo'
+    url: /web/nav/
+  Link1: 
+    name: '[Include Sample]'
+    url: /web/include/
+  Link2: 
+    name: '[Back Sample]'
+    url: /web/back/
 ---
 
 <div class='container'>
