--- a/web/nav/index.html
+++ b/web/nav/index.html
@@ -12,14 +12,54 @@ navs:
     url: /web/back/
 ---
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-  <ul class="navbar-nav">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
 {% for n in page.navs %}
-    <li class="nav-item active">
-      <a class="nav-link" 
-	 href="{{ n[1].url | prepend: site.baseurl }}">
-         {{n[1].name}}
-      </a>
-    </li>
+      <li class="nav-item active">
+        <a class="nav-link" 
+  	 href="{{ n[1].url | prepend: site.baseurl }}">
+           {{n[1].name}}
+        </a>
+      </li>
 {% endfor %}
-  </ul>
+    </ul>
+  <div>
+</nav>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav2">
+    <ul class="navbar-nav">
+{% for n in page.navs %}
+      <li class="nav-item active">
+        <a class="nav-link" 
+  	 href="{{ n[1].url | prepend: site.baseurl }}">
+           {{n[1].name}}
+        </a>
+      </li>
+{% endfor %}
+    </ul>
+  <div>
+</nav>
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav2" aria-controls="navbarNav2" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav2">
+    <ul class="navbar-nav flex-column">
+{% for n in page.navs %}
+      <li class="nav-item active">
+        <a class="nav-link" 
+  	 href="{{ n[1].url | prepend: site.baseurl }}">
+           {{n[1].name}}
+        </a>
+      </li>
+{% endfor %}
+    </ul>
+  <div>
 </nav>
