--- a/web/chartjs/scatter/index.html
+++ b/web/chartjs/scatter/index.html
@@ -95,7 +95,11 @@ function getRandom(min,max,fixed){
       },
       scales:{
         xAxes:[{
-  	type:'linear',
+  	  type:'linear',
+	  scaleLabel:{
+            display:true,
+	    labelString:'x-label-1',
+	  },
           ticks:{
             min: 1564641183500,
 	    max: 1564641184000,
